# OpenGL_Drawing_Triangles

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  libglfw.so.3.4  main.cpp  shaders.cpp  shaders.h
